# osu-stuff

./: .clang-format  .clangd  .editorconfig  .env.production  .gitignore  .gitmodules  .prettierignore  .prettierrc.yaml  CMakeLists.txt  LICENSE  README.md  binding.gyp  electron-builder.yml  electron.vite.config.1754490310639.mjs  electron.vite.config.1756432406437.mjs  electron.vite.config.mjs  electron.vite.config.ts  ez  forge.config.js  go.mod  main.go  output.json  package.json  preload.config.js  renderer.config.js  result.json  tsconfig.json  tsconfig.node.json  tsconfig.test.json  tsconfig.web.json  vite.config.ts  vitest.config.ts  wails.json  webpack.config.js
.github/: dependabot.yml
.github/workflow/: build.yml  release.yml
.github/workflows/: build.yml  codeql.yml  dependabot.yml  release.yml  test.yml
.zed/: debug.json
changelog/: notes.md
changelog/v1.6.3/: NOTES.md
changelog/v1.6.4/: NOTES.md
changelog/v1.7.3/: NOTES.md
changelog/v1.8.1/: NOTES.md
config/: preload.config.js  renderer.config.js
env/: .development
flatpak/: org.mezleca.osu-stuff.desktop  org.mezleca.osu-stuff.metainfo.xml  org.mezleca.osu-stuff.yml
frontend/: index.html  package-lock.json  package.json  package.json.md5  tsconfig.json
frontend/src/: main.ts
frontend/src/css/: index.css
resources/fonts/: README.md  Torus_Bold.hpp  Torus_Regular.hpp  Torus_SemiBold.hpp
resources/templates/: osdb.osdb
scripts/: changelog.ts  cleanup.js  cleanup.ts  cli.js  cli.ts
scripts/plugins/: svelte.ts
src/: downloader.js  index.css  index.html  index.js  logger.js  main.cpp  preload.cjs  preload.js  preload.mjs
src/api/: api.hpp  osu-web.cpp  osu-web.hpp
src/api/osu-v2/: api.cpp  detail.hpp
src/clients/: client.cpp  client.hpp  detail.cpp  detail.hpp  lazer.cpp  lazer.hpp  stable.cpp  stable.hpp
src/clients/filter/: filter.cpp  filter.hpp
src/extra/models/: lazer.js
src/gui/: index.css  index.html
src/js/: app.js  events.js  functions.js  index.js  tabs.js
src/js/events/: emitter.js  events.js
src/js/manager/: filter.js  manager.js
src/js/popup/: alert.js  popup.js
src/js/reader/: definitions.js  reader.js
src/js/stuff/: collector.js  download_from_players.js  download_json.js  first_place.js  missing.js  remove_maps.js
src/js/tasks/: events.js
src/js/utils/: config.js  download_maps.js  downloader.js  global.js
src/main/: core.ts  downloader.js  env.d.ts  env.ts  fetch.js  fetch.ts  index.js  index.ts  ipc.ts  logger.js  logger.ts  update.ts  utils.ts
src/main/beatmaps/: beatmap_manager.js  beatmaps.js  beatmaps.ts  builder.js  (+5 more)
src/modules/: processor.cpp
src/preload/: index.js  index.ts
src/renderer/: App.svelte  app.js  env.d.ts  index.html  main.ts  svelte.config.js  tabs.js
src/schemas/: lazer.hpp
src/scripts/: function.js  tabs.js
src/shared/: flags.ts  timing.ts  types.ts
src/ui/: constants.hpp  custom.cpp  custom.hpp  layout.cpp  layout.hpp  modal.hpp  object.hpp  theme.hpp  ui.cpp  ui.hpp  widget.cpp  widget.hpp
src/utils/: binary.hpp  gzip.hpp  math.hpp  query.hpp  thread_pool.cpp  thread_pool.hpp
src/worker/: beatmap_worker.ts
tests/: CMakeLists.txt  beatmap-parser.cpp  beatmap_builder.test.js  beatmap_parser_tests.cpp  clients_tests.cpp  helper.hpp  legacy-parser.cpp  legacy_parser_tests.cpp  osdb-parser.cpp  osdb_parser_tests.cpp  osu-clients.cpp  osu_api_tests.cpp  stuff_utils.cpp  test_helper.hpp  ui-widgets.cpp  utils.cpp  utils.js  yt_dlp.test.js
tests/.data/: README.md  config.db  mirrors.db  processed.db
tests/.data/lazer/: client.realm
tests/.data/osu/: collection.db  osu!.db
tests/.data/osu/Songs/1488966 glass beach - running/: glass beach - running (casperisapotato) [setting sun].osu
tests/.data/osu/Songs/1531792 glass beach - glass beach/: glass beach - glass beach (Shiny Braixen) [glass beach].osu
tests/.data/osu/Songs/1883166 glass beach - glass beach/: glass beach - glass beach (AnnouncerF) [blood rivers].osu
tests/.data/osu/Songs/2134701 The Killers - Mr Brightside/: The Killers - Mr. Brightside (mindmaster107) [Basic].osu  The Killers - Mr. Brightside (mindmaster107) [Hard].osu
tests/.data/osu/Songs/2190181 glass beach - neon glow/: glass beach - neon glow (Shiny Braixen) [extra].osu  glass beach - neon glow (Shiny Braixen) [insane].osu  glass beach - neon glow (Shiny Braixen) [stay with me].osu  glass beach - neon glow (Shiny Braixen).osb
tests/.data/osu/Songs/2190181 glass beach - neon glow/sb/: glass beach - neon glow (Shiny Braixen).osb
tests/.data/osu/Songs/2265495 glass beach - orchids/: glass beach - orchids (kanocchi) [blue orchids bloom].osu  glass beach - orchids (kanocchi) [collab easy].osu  glass beach - orchids (kanocchi) [collab hard].osu  glass beach - orchids (kanocchi) [collab normal].osu
tests/.data/osu/Songs/2284913 Magdalena Bay - Death & Romance/: Magdalena Bay - Death & Romance (Chromasia) [Orpheus].osu
tests/.data/osu/Songs/2298668 mafumafu x Amatsuki - nonfantasy/: mafumafu x Amatsuki - nonfantasy (aundy) [amathica's hard].osu  mafumafu x Amatsuki - nonfantasy (aundy) [collab expert].osu  mafumafu x Amatsuki - nonfantasy (aundy) [killian x chu's insane].osu  mafumafu x Amatsuki - nonfantasy (aundy) [magic love].osu
tests/.data/osu/Songs/2329714 Yasuharu Takanashi - Dokuryuu no Cobra/: Yasuharu Takanashi - Dokuryuu no Cobra (leledorf) [Expert].osu  Yasuharu Takanashi - Dokuryuu no Cobra (leledorf) [Extreme].osu  Yasuharu Takanashi - Dokuryuu no Cobra (leledorf) [Fuxi's Hard].osu  Yasuharu Takanashi - Dokuryuu no Cobra (leledorf) [Normal].osu  Yasuharu Takanashi - Dokuryuu no Cobra (leledorf) [Vanya's Insane].osu
tests/.data/osu/Songs/2402889 youman feat GUMI - Worst Regret (Sped Up & Cut Ver)/: youman feat. GUMI - Worst Regret (Sped Up & Cut Ver.) (Omekyu) [Hayakou's Extra].osu  youman feat. GUMI - Worst Regret (Sped Up & Cut Ver.) (Omekyu) [Tragedy].osu
tests/cmake/: assets.cmake  fetch_test_data.cmake
tests/main/: beatmap_builder.test.ts  clients.test.ts  downloader.test.ts  drivers.test.ts  processor.test.ts
tests/utils/: utils.js  utils.ts
(+402 files in other folders)
